--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,7 +81,7 @@ r.SupportDepthOnlyIndexBuffers=True
 r.SupportReversedIndexBuffers=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/HandheldAR/Maps/HandheldARBlankMap.HandheldARBlankMap
+EditorStartupMap=/Game/gezginfolders/user_interface/main_menu/start.start
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -89,9 +89,9 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/HandheldAR/Maps/HandheldARBlankMap.HandheldARBlankMap
+GameDefaultMap=/Game/gezginfolders/user_interface/main_menu/start.start
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/HandheldAR/Blueprints/GameFramework/BP_ARGameMode.BP_ARGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
@@ -120,7 +120,7 @@ GameScreenshotSaveDirectory=(Path="Screenshots/")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_HandheldARBP",NewGameName="/Script/gezgin")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-Orientation=Sensor
+Orientation=Portrait
 MinSDKVersion=24
 TargetSDKVersion=24
 
@@ -167,3 +167,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
