--- a/gezgin.uproject
+++ b/gezgin.uproject
@@ -19,6 +19,11 @@
 				"Win64",
 				"Mac"
 			]
+		},
+		{
+			"Name": "VaRest",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/e47be161e7a24e928560290abd5dcc4f"
 		}
 	],
 	"TargetPlatforms": [
