signin signup sayfaları tamamlandı!

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -121,8 +121,10 @@ GameScreenshotSaveDirectory=(Path="Screenshots/")
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 Orientation=Portrait
-MinSDKVersion=24
+MinSDKVersion=21
 TargetSDKVersion=24
+bBuildForArm64=True
+bBuildForArmV7=False
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
