ilk apk çıkartıldı

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,7 +81,7 @@ r.SupportDepthOnlyIndexBuffers=True
 r.SupportReversedIndexBuffers=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/gezginfolders/user_interface/main_menu/start.start
+EditorStartupMap=/Game/gezginfolders/user_interface/other_levels/account_leveel/account.account
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -89,7 +89,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/gezginfolders/user_interface/main_menu/start.start
+GameDefaultMap=/Game/gezginfolders/user_interface/other_levels/main_menu/main_menu.main_menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
@@ -122,9 +122,19 @@ GameScreenshotSaveDirectory=(Path="Screenshots/")
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 Orientation=Portrait
 MinSDKVersion=21
-TargetSDKVersion=24
+TargetSDKVersion=30
 bBuildForArm64=True
 bBuildForArmV7=False
+PackageName=com.ieeeiuc.gezgin
+bPackageDataInsideApk=True
+bForceSmallOBBFiles=False
+bEnableBundle=False
+KeyStore=
+KeyAlias=
+KeyStorePassword=
+KeyPassword=
+bEnableUniversalAPK=False
+bSupportsVulkan=False
 
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=True
