artık JWT tokenini sayfalar arası iletebiliyoruz

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -81,15 +81,15 @@ r.SupportDepthOnlyIndexBuffers=True
 r.SupportReversedIndexBuffers=True
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/gezginfolders/user_interface/other_levels/account_leveel/account.account
+EditorStartupMap=/Game/mainfolder/main.main
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/gezginfolders/user_interface/other_levels/main_menu/main_menu.main_menu
+GameInstanceClass=/Game/mainfolder/gezgininstance.gezgininstance_C
+GameDefaultMap=/Game/mainfolder/main.main
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
