ödüller post isteği, jwt plugini, bazı düzenlemeler yapıldı.

--- a/gezgin.uproject
+++ b/gezgin.uproject
@@ -28,6 +28,11 @@
 		{
 			"Name": "OnlineSubsystemGoogle",
 			"Enabled": true
+		},
+		{
+			"Name": "JWTPlugin",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/5a7b13f17ce04fc3b4a571a8faf58b4a"
 		}
 	],
 	"TargetPlatforms": [
