--- a/gezgin.uproject
+++ b/gezgin.uproject
@@ -31,7 +31,7 @@
 		},
 		{
 			"Name": "JWTPlugin",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/5a7b13f17ce04fc3b4a571a8faf58b4a"
 		}
 	],
