--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -219,3 +219,9 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
+[/Script/WindowsTargetPlatform.WindowsTargetSettings]
+Compiler=Default
+
+[/Script/AppleARKit.AppleARKitSettings]
+bRequireARKitSupport=True
+
